--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 PORT=3333
 HOST=0.0.0.0
 NODE_ENV=development
-APP_KEY=fETxGQ6fn_0SMmiXPZfS0Aj8f61NOxpB
+APP_KEY=<app_key>  # Replace with your actual app key
 DRIVE_DISK=local
+
+AZURE_ENDPOINT=<azure_endpoint>  # e.g., https://<your-azure-endpoint>.communication.azure.com/
+AZURE_ACCESS_KEY=<azure_access_key>  # Your Azure access key
+AZURE_SENDER_ADDRESS=<azure_sender_address>  # e.g., example@domain.com
+
 SMTP_HOST=localhost
 SMTP_PORT=587
 SMTP_USERNAME=<username>
 SMTP_PASSWORD=<password>
-CACHE_VIEWS=false
